welectronics.com (archived on 2010-08-31)
{
  "alexa_rank": 83129,
  "analysis_subcorpus": true,
  "categories": "informationtech;shopping",
  "char_count": 4640,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.54,
  "homepage_snapshot_redirected_domain": "welectronics.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101005103932id_/http://welectronics.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101005103932id_/http%3A//welectronics.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "welectronics.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100831063945id_/http%3A//www.welectronics.com/privacy.html",
  "policy_title": "Overseas Electronics www.welectronics.com Privacy Policy",
  "policy_url": "welectronics.com/privacy.html",
  "sha1": "7fc48042ab2823d44019fa857b221a6740974865",
  "simhash": 15051364298385941871,
  "simhash_updated": false,
  "site_hostname": "welectronics.com",
  "site_url": "http://welectronics.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100831063945",
  "word_count": 712,
  "year": 2010
}

--- a/w/we/wel/welectronics.com.html
+++ b/w/we/wel/welectronics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the welectronics.com privacy policy that was archived on 2010-05-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100528172814id_/http%3A//www.welectronics.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the welectronics.com privacy policy that was archived on 2010-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100831063945id_/http%3A//www.welectronics.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="Author" content="Azam Pehlari">
@@ -331,69 +331,71 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
         </tbody></table>
         <table cellspacing="0" cellpadding="1" border="0" width="260">
           <tbody><tr>
-            <td align="left" bgcolor="#C5E2C5"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">1.</span><a href="http://welectronics.com/gsm/Nokia/Nokia_N900.HTML"><font color="#000000" style="font-size: 9pt">NOKIA 
-            N900 UNLOCKED GSM&nbsp; PHONE</font></a></span></font></td>
-            <td align="right" bgcolor="#C5E2C5">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$549.99</span></font></td>
-          </tr>
-          <tr>
-            <td align="left" bgcolor="#FFFFFF">
-            <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">2.</span><a href="gsm/Sony%20Ericsson/SONYERICSSON_XPERIA-X10.HTML"><font color="#000000" style="font-size: 9pt">SONY 
-            ERICSSON_XPERIA X10I QUAD BAND UNLOCKED GSM PHONE</font></a></span></font></p></td>
-            <td align="right" bgcolor="#FFFFFF">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$574.99</span></font></td>
-          </tr>
-          <tr>
             <td align="left" bgcolor="#C5E2C5">
-            <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">3.</span><a href="http://www.welectronics.com/gsm/LG/LG-BL40.HTML"><font color="#000000" style="font-size: 9pt">LG 
-            BL40 NEW CHOCOLATE GSM UNLOCKED PHONE</font></a></span></font></p></td>
-            <td align="right" bgcolor="#C5E2C5">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext"> $349.99</span></font></td>
-          </tr>
-          <tr bgcolor="#FFFFFF">
-            <td align="left">
-            <p align="justify"><font face="Verdana"><span class="smalltext">
-			<span style="font-size: 9pt">4.</span><a href="http://welectronics.com/gsm/Motorola/Motorola_MILESTONE-DROID.HTML"><font color="#000000" style="font-size: 9pt">MOTOROLA 
-            DROID MILESTONE  
-			UNLOCKED GSM PHONE</font></a></span></font></p></td>
-            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$494.99</span></font></td>
-          </tr>
-          <tr bgcolor="#FFFFFF">
-            <td align="left" bgcolor="#C5E2C5">
-            <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">5.</span><a href="http://welectronics.com/gsm/hTC/HTC-DESIRE.HTML"><font color="#000000" style="font-size: 9pt">HTC 
+            <p align="justify"><span class="smalltext">
+            <font face="Verdana" style="font-size: 9pt">1</font></span><font face="Verdana"><span class="smalltext"><span style="font-size: 9pt">.</span><a href="http://welectronics.com/gsm/hTC/HTC-DESIRE.HTML"><font color="#000000" style="font-size: 9pt">HTC 
             DESIRE A8181 UNLOCKED GSM PHONE</font></a><font style="font-size: 9pt"> </font></span>
 			</font></p></td>
             <td align="right" bgcolor="#C5E2C5">
 			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$599.99</span></font></td>
           </tr>
           <tr>
+            <td align="left">
+            <p align="justify"><span class="smalltext">
+            <font face="Verdana" style="font-size: 9pt">2</font></span><font face="Verdana"><span class="smalltext"><span style="font-size: 9pt">.</span><a href="http://www.welectronics.com/gsm/Motorola/Motorola_XT720.HTML"><font color="#000000" style="font-size: 9pt">MOTOROLA 
+            MILESTONE XT720  
+			UNLOCKED GSM PHONE</font></a></span></font></p></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$549.99</span></font></td>
+          </tr>
+          <tr>
             <td align="left" bgcolor="#FFFFFF">
-            <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">6.</span><a href="http://www.welectronics.com/Bluetooth/NOKIA-BH-904.HTML"><font color="#000000" style="font-size: 9pt">NOKIA 
-			BH-904
-			</font><font color="black" style="font-size: 9pt">BLUETOOTH HEADSET</font></a></span></font></p></td>
+            <p align="justify"><span class="smalltext">
+            <font face="Verdana" style="font-size: 9pt">3</font></span><font face="Verdana"><span class="smalltext"><span style="font-size: 9pt">.</span><a href="gsm/Sony%20Ericsson/SONYERICSSON_XPERIA-X10.HTML"><font color="#000000" style="font-size: 9pt">SONY 
+            ERICSSON_XPERIA X10I QUAD BAND UNLOCKED GSM PHONE</font></a></span></font></p></td>
             <td align="right" bgcolor="#FFFFFF">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$94.99</span></font></td>
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$519.99</span></font></td>
+          </tr>
+          <tr>
+            <td align="left" bgcolor="#C5E2C5">
+            <p align="justify"><span class="smalltext">
+            <font face="Verdana" style="font-size: 9pt">4</font></span><font face="Verdana"><span class="smalltext"><span style="font-size: 9pt">.</span><a href="http://www.welectronics.com/gsm/LG/LG-GX500.HTML"><font color="#000000" style="font-size: 9pt">LG 
+            GX500 DUAL SIM GSM UNLOCKED PHONE</font></a></span></font></p></td>
+            <td align="right" bgcolor="#C5E2C5">
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext"> $254.99</span></font></td>
           </tr>
           <tr bgcolor="#FFFFFF">
-            <td align="left" bgcolor="#C5E2C5">
-            <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">7.</span><a href="http://welectronics.com/camcorder/Sony/SONY_DCR-SR46E.HTML"><font color="black" style="font-size: 9pt">SONY DCR- SR46E 40GB HD PAL CAMCORDER </font></a></span>
-			</font></p></td>
-            <td align="right" bgcolor="#C5E2C5">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$529.99</span></font></td>
+            <td align="left">
+            <p align="justify"><span class="smalltext">
+            <font face="Verdana" style="font-size: 9pt">5</font></span><font face="Verdana"><span class="smalltext"><span style="font-size: 9pt">.</span><a href="http://www.welectronics.com/gsm/BLACKBERRY/BLACKBERRY-BOLD-9700-T-Mobile.HTML"><font color="#000000" style="font-size: 9pt">T-MOBILE 
+            BLACKBERRY 9700 BOLD2  
+			UNLOCKED GSM PHONE</font></a></span></font></p></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$444.99</span></font></td>
           </tr>
           <tr>
             <td align="left" bgcolor="#FFFFFF">
             <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">8.</span><a href="http://welectronics.com/cordlessphones/PANASONIC_KX-TG6441T.HTML"><font color="#000000" style="font-size: 9pt">PANASONIC KX-TG6441T</font><font color="black" style="font-size: 9pt"> 
+			<span class="smalltext"><span style="font-size: 9pt">6.</span><a href="http://www.welectronics.com/Bluetooth/SONYERICSSON-HBH-DS980.HTML"><font color="#000000" style="font-size: 9pt">SONY 
+            ERICSSON DS980
+			</font><font color="black" style="font-size: 9pt">BLUETOOTH HEADSET</font></a></span></font></p></td>
+            <td align="right" bgcolor="#FFFFFF">
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$87.99</span></font></td>
+          </tr>
+          <tr bgcolor="#FFFFFF">
+            <td align="left" bgcolor="#C5E2C5">
+            <p align="justify"><font face="Verdana">
+			<span class="smalltext"><span style="font-size: 9pt">7.</span><a href="http://welectronics.com/camcorder/Sony/SONY_DCR-SX43E.HTML"><font color="black" style="font-size: 9pt">SONY DCR-SX43E PAL CAMCORDER </font>
+            </a></span>
+			</font></p></td>
+            <td align="right" bgcolor="#C5E2C5">
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$274.99</span></font></td>
+          </tr>
+          <tr>
+            <td align="left" bgcolor="#FFFFFF">
+            <p align="justify"><font face="Verdana">
+			<span class="smalltext"><span style="font-size: 9pt">8.</span><a href="http://welectronics.com/cordlessphones/PANASONIC_KX-TG7531B.HTML"><font color="#000000" style="font-size: 9pt">PANASONIC KX-TG7531B</font><font color="black" style="font-size: 9pt"> 
 			CORDLESS PHONE</font></a></span></font></p></td>
             <td align="right" bgcolor="#FFFFFF">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$74.99</span></font></td>
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$94.99</span></font></td>
           </tr>
           <tr bgcolor="#FFFFFF">
             <td align="left" bgcolor="#C5E2C5">
@@ -405,9 +407,10 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
           <tr>
             <td align="left" bgcolor="#FFFFFF">
             <p align="justify"><font face="Verdana">
-			<span class="smalltext"><span style="font-size: 9pt">10.</span><a href="http://welectronics.com/tv/SONY-KLV20G300.HTML"><font color="#000000" style="font-size: 9pt">SONY KLV-20G300 LCD MUTI SYSTEM TV</font></a></span></font></p></td>
+			<span class="smalltext"><span style="font-size: 9pt">10.</span><a href="http://welectronics.com/tv/SAMSUNG-UA32C4000PM.HTML"><font color="#000000" style="font-size: 9pt">SAMSUNG 
+            UA32C4000PM LED MULTISYSTEM TV</font></a></span></font></p></td>
             <td align="right" bgcolor="#FFFFFF">
-			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$389.99</span></font></td>
+			<font face="Verdana" style="font-size: 9pt"><span class="smalltext">$999.99</span></font></td>
           </tr>
         </tbody></table>
         <br>
@@ -429,7 +432,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             <td colspan="3" align="left">
             <p align="justify"><span class="smalltext">&nbsp;1.<font size="2"><a href="http://www.welectronics.com/gsm/Sony%20Ericsson/SONYERICSSON_U1A-SATIO.HTML"><font color="#000000">SONY 
             ERICSSON U1A SATIO UNLOCKED GSM PHONE</font></a></font></span></p></td>
-            <td align="right"><span class="smalltext">$539.99</span></td>
+            <td align="right"><span class="smalltext">$499.99</span></td>
           </tr>
           <tr bgcolor="#C5E2C5">
             <td colspan="3" align="left">
@@ -453,7 +456,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             <td colspan="3" align="left">
             <p align="justify"><span class="smalltext">&nbsp;5.<font size="2"><a href="http://www.welectronics.com/gsm/apple/APPLE-IPHONE-3GS-32GB.HTML"><font color="#000000">APPLE IPHONE 3GS 
 			32GB QUAD BAND UNLOCKED PHONE</font></a></font></span></p></td>
-            <td align="right"><span class="smalltext">$949.99</span></td>
+            <td align="right"><span class="smalltext">$849.99</span></td>
           </tr>
           <tr bgcolor="#C5E2C5">
             <td colspan="3" align="left">
@@ -479,7 +482,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             <td colspan="3" align="left">
             <p align="justify"><span class="smalltext">&nbsp;9.<a href="http://www.welectronics.com/gsm/BLACKBERRY/BLACKBERRY-BOLD-9700-T-Mobile.HTML"><font size="2" color="#000000">T-MOBILE 
             BLACKBERRY BOLD2 9700 UNLOCKED GSM PHONE</font></a></span></p></td>
-            <td align="right"><span class="smalltext">$499.99</span></td>
+            <td align="right"><span class="smalltext">$444.99</span></td>
           </tr>
           <tr bgcolor="#C5E2C5">
             <td colspan="3" align="left" height="40">
@@ -509,14 +512,14 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
 			<p align="justify"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">
 			1.<font color="#000000"><a href="http://www.welectronics.com/gsm/Nokia/Nokia_C5.HTML"><font color="#000000">NOKIA 
             C5 QUAD BAND UNLOCKED GSM PHONE</font></a></font></span></font></p></td>
-            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$224.99</span></font></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$179.99</span></font></td>
           </tr>
           <tr>
             <td align="left">
 			<p align="justify"><span class="smalltext">
             <font face="Verdana" style="font-size: 9pt">2</font></span><font face="Verdana" style="font-size: 9pt"><span class="smalltext">.<font color="black"><a href="http://www.welectronics.com/gsm/Nokia/Nokia_6700-SLIDE.HTML"><font color="#000000">NOKIA 
             6700 SLIDE QUAD BAND UNLOCKED GSM PHONE</font></a></font></span></font></p></td>
-            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$249.99</span></font></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$218.99</span></font></td>
           </tr>
           <tr>
             <td align="left">
@@ -532,7 +535,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             <span class="smalltext">
 			4.<a href="http://welectronics.com/gsm/Samsung/SAMSUNG_B5702-DUOS.HTML"><font color="black">SAMSUNG 
             B5702 DUAL SIM QUAD BAND UNLOCKED GSM PHONE</font></a></span></font></p></td>
-            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$299.99</span></font></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$199.99</span></font></td>
           </tr>
           <tr>
             <td align="left">
@@ -540,7 +543,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             5.<a href="http://www.welectronics.com/gsm/hTC/HTC-TOUCH-HD-MINI.HTML"><font color="black">HTC 
             HD MINI QUAD BAND UNLOCKED GSM PHONE</font></a></span></font></p></td>
             <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">
-			$464.99</span></font></td>
+			$374.99</span></font></td>
           </tr>
 			<tr>
             <td align="left">
@@ -554,7 +557,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
 			<p align="justify"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">
             7.<a href="http://welectronics.com/gsm/BLACKBERRY/BLACKBERRY-BOLD-9700-T-Mobile.HTML"><font color="black">T-MOBLIE 
             BLACKBERRY 9700 BOLD2 QUAD BAND UNLOCKED PHONE</font></a></span></font></p></td>
-            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$499.99</span></font></td>
+            <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">$444.99</span></font></td>
           </tr>
 			<tr>
             <td align="left">
@@ -570,7 +573,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             9.<a href="http://welectronics.com/gsm/LG/LG-BL40.HTML"><font color="black">LG 
             BL40 NEW CHOCOLATE QUAD BAND UNLOCKED GSM PHONE</font></a></span></font></p></td>
             <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">
-            $349.99</span></font></td>
+            $299.99</span></font></td>
           </tr>
 			<tr>
             <td align="left">
@@ -578,7 +581,7 @@ return theMonth + " " + oneDate.getDate() + ", " + theYear
             <font face="Verdana" style="font-size: 9pt">10</font></span><font face="Verdana" style="font-size: 9pt"><span class="smalltext">.<a href="http://welectronics.com/gsm/Samsung/SAMSUNG_S5230-HELLO-KITTY.HTML"><font color="#000000">S</font><font color="black">AMSUNG 
             S5230 HELLO KITTY QUAD BAND UNLOCKED PHONE</font></a></span></font></p></td>
             <td align="right"><font face="Verdana" style="font-size: 9pt"><span class="smalltext">
-            $249.99</span></font></td>
+            $199.99</span></font></td>
           </tr>
           <tr bgcolor="#C5E2C5">
             <td align="left" bgcolor="#FFFFFF">
