fleshlightgirls.com (archived on 2010-08-31)
{
  "alexa_rank": 159064,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3852,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.25,
  "homepage_snapshot_redirected_domain": "fleshlightgirls.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101008003716id_/http://www.fleshlightgirls.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101008003716id_/http%3A//fleshlightgirls.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "fleshlightgirls.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100831090548id_/http%3A//www.fleshlightgirls.com/faq-privacy-policy",
  "policy_title": "Welcome to FleshlightGirls.com",
  "policy_url": "fleshlightgirls.com/faq-privacy-policy",
  "sha1": "693a527d92ec1d94bdbe381bbce8dea15513b60b",
  "simhash": 5104577665194479470,
  "simhash_updated": false,
  "site_hostname": "fleshlightgirls.com",
  "site_url": "http://fleshlightgirls.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100831090548",
  "word_count": 612,
  "year": 2010
}

--- a/f/fl/fle/fleshlightgirls.com.html
+++ b/f/fl/fle/fleshlightgirls.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fleshlightgirls.com privacy policy that was archived on 2010-04-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100430225722id_/http%3A//www.fleshlightgirls.com/faq-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fleshlightgirls.com privacy policy that was archived on 2010-08-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100831090548id_/http%3A//www.fleshlightgirls.com/faq-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -20,7 +20,7 @@
 <link type="text/css" rel="stylesheet" href="/includes/colorbox.css">
 
 
-																														
+																																	
 
 
 </head>
@@ -96,6 +96,7 @@ src="http://static.fleshlightgirls.com/images/flg_header_penthouse.jpg" border="
 		<a id="cssNavButton678" class="cssNavButton" style="text-align: left;" href="/teagan-presley-fleshlight/"><span>Teagan Presley</span></a>
 		<a id="cssNavButton300" class="cssNavButton" style="text-align: left;" href="/raven-riley-fleshlight/"><span>Raven Riley</span></a>
 		<a id="cssNavButton477" class="cssNavButton" style="text-align: left;" href="/tera-patrick-fleshlight/"><span>Tera Patrick</span></a>
+		<a id="cssNavButton915" class="cssNavButton" style="text-align: left;" href="/stoya-fleshlight/"><span>Stoya</span></a>
 		<a id="cssNavButton305" class="cssNavButton" style="text-align: left;" href="/lia19-fleshlight/"><span>Lia19</span></a>
 		<a id="cssNavButton878" class="cssNavButton" style="text-align: left;" href="/katsuni-fleshlight/"><span>Katsuni</span></a>
 		<a id="cssNavButton380" class="cssNavButton" style="text-align: left;" href="/menage-a-trois/"><span>Menage a Trois</span></a>
@@ -441,7 +442,7 @@ if ( pageTracker ) {
 </script>
 
 <noscript>
-<img height="1" width="1" border="0" src="http://www.google-analytics.com/__utm.gif?utmwv=4.5.7&utmn=2322189333&utmac=UA-355541-4&utmcc=__utmv%3Dnoscript&utmcs=UTF-8&utmdt=Welcome+to+FleshlightGirls.com&utmhn=www.fleshlightgirls.com&utmp=%2Ffaq-privacy-policy%2F&utmr=" />
+<img height="1" width="1" border="0" src="http://www.google-analytics.com/__utm.gif?utmwv=4.5.7&utmn=2005519862&utmac=UA-355541-4&utmcc=__utmv%3Dnoscript&utmcs=UTF-8&utmdt=Welcome+to+FleshlightGirls.com&utmhn=www.fleshlightgirls.com&utmp=%2Ffaq-privacy-policy%2F&utmr=" />
 </noscript>
 
 
@@ -456,5 +457,6 @@ var lpPosY = 100;
 
 
 
+<!-- FLightD3ck -->
 
 </body></html>
