--- a/l/ly/lyr/lyricmania.com.html
+++ b/l/ly/lyr/lyricmania.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lyricmania.com privacy policy that was archived on 2009-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090513143240id_/http%3A//www.lyricmania.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lyricmania.com privacy policy that was archived on 2010-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100901033559id_/http%3A//www.lyricmania.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><title>Privacy Policy at Lyric Mania</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -96,11 +96,21 @@ google_color_url = "08A0C2";
 <a href="/page.html?link=freemp3albums" target="_blank">Free MP3 Albums</a><br>
 <a href="http://www.1musiclyrics.net" target="_blank" onclick="(new Image()).src='/page.html?trade=1musiclyrics.net'">Music Lyrics</a><br>
 <a href="http://www.seekalyric.com" target="_blank" onclick="(new Image()).src='/page.html?trade=seekalyric.com'">Lyrics Search</a><br>
-<a href="http://www.seekavideo.com" target="_blank" onclick="(new Image()).src='/page.html?trade=seekavideo.com'">Music Videos</a><br>
+<a href="http://www.mp3fusion.net">Mp3 Downloads</a><br>
 </p>
 <p class="widget">
-<!-- START CUSTOM WIDGETBUCKS CODE --></p><div><script src="http://www.widgetbucks.com/script/ads.js?uid=56ZhFFqB7XVu5N7I"></script></div><!-- END CUSTOM WIDGETBUCKS CODE -->
-<p></p>
+<!-- Begin: AdBrite, Generated: 2010-03-14 11:53:23  -->
+<script type="text/javascript">
+var AdBrite_Title_Color = '0000FF';
+var AdBrite_Text_Color = '000000';
+var AdBrite_Background_Color = 'FFFFFF';
+var AdBrite_Border_Color = 'CCCCCC';
+var AdBrite_URL_Color = '008000';
+try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+</script>
+<script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1564647&zs=3330305f323530&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1564647&amp;zs=3330305f323530&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100901033559id_%2Fhttp%253A%2F%2Fwww.lyricmania.com%2Fprivacypolicy.html" type="text/javascript"></script>
+<!-- End: AdBrite -->
+</p>
 </div>
 </div>
 <p class="clear content-bottom"></p>
