darrelconceptsghana.com (archived on 2010-09-01)
{
  "alexa_rank": 155850,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 2235,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.23,
  "homepage_snapshot_redirected_domain": "darrelconceptsghana.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101027010528id_/http://darrelconceptsghana.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101027010528id_/http%3A//darrelconceptsghana.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "darrelconceptsghana.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100901042904id_/http%3A//www.darrelconceptsghana.com/privacy.html",
  "policy_title": "Privacy Policy- Darrel Technologies Ghana- www.darrelconceptsghana.com",
  "policy_url": "darrelconceptsghana.com/privacy.html",
  "sha1": "8446ee9c602cf21de7d3ed1f67363196bf1ffc83",
  "simhash": 13547908654745116110,
  "simhash_updated": false,
  "site_hostname": "darrelconceptsghana.com",
  "site_url": "http://darrelconceptsghana.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100901042904",
  "word_count": 350,
  "year": 2010
}

--- a/d/da/dar/darrelconceptsghana.com.html
+++ b/d/da/dar/darrelconceptsghana.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the darrelconceptsghana.com privacy policy that was archived on 2010-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100624114305id_/http%3A//www.darrelconceptsghana.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the darrelconceptsghana.com privacy policy that was archived on 2010-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100901042904id_/http%3A//www.darrelconceptsghana.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy- Darrel Technologies Ghana- www.darrelconceptsghana.com</title>
@@ -70,12 +70,11 @@
             <tbody>
               <tr>
                 <td width="16"><span class="spacer">&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
-                <td width="103" class="menutxt"><a href="http://darrelconceptsghana.com/web-development.html" title="Web design, Web applications and full development plans- Brochure Web Sites, E-Commerce Sites " class="anchorclass" rel="submenu1"><b>Web Development </b></a>
+                <td width="103" class="menutxt"><a href="http://darrelconceptsghana.com/web-design.html" title="Web design that converts leads to paying customers" class="anchorclass" rel="submenu1"><b>Web Development </b></a>
                     <div id="submenu1" class="anylinkcss">
                       <ul>
-                        <li><a href="http://darrelconceptsghana.com/web-development.html" title="Web design, Web applications and full development plans- Brochure Web Sites, E-Commerce Sites">Web Development Overview</a></li>
-                        <li><a href="http://darrelconceptsghana.com/web-design.html">Web Design</a></li>
-                        <li><a href="http://darrelconceptsghana.com/web/plans/">Web Development Plans</a></li>
+                        <li><a href="http://darrelconceptsghana.com/web-design.html">Customized Web Design</a></li>
+                        <li><a href="http://darrelconceptsghana.com/web/plans/">SME Web Development Plans</a></li>
                         <li><a href="http://darrelconceptsghana.com/web-applications.html">Web Applications</a></li>
                       </ul>
                   </div></td>
@@ -110,7 +109,6 @@
                         <li><a href="http://darrelconceptsghana.com/copywriting.html" title="SEO Copywriting">SEO Copywriting</a></li>
                         <li><a href="http://darrelconceptsghana.com/articles-press-release.html" title="Press Releases and Articles">Press Releass/Articles</a></li>
                         <li><a href="http://darrelconceptsghana.com/email-marketing.html" title="E-mail Marketing">E-Mail Marketing</a></li>
-                        <li><a href="http://www.darrelconceptsghana.com/advertising-pay-per-click.html" title="Pay Per Click/Web Advertising">Web Advertising/PPC Campaigns</a></li>
                       </ul>
                   </div></td>
                 <td width="40">&nbsp;</td>
@@ -160,7 +158,7 @@
                           <noscript>
                           <div></div>
                           </noscript>
-                          <div id="livezilla_tracking" style="display:none"><script type="text/javascript" src="http://darrelconceptsghana.com/live/server.php?request=track&amp;output=jcrpt&amp;nse=0.01171189762824909"></script></div>
+                          <div id="livezilla_tracking" style="display:none"><script type="text/javascript" src="http://darrelconceptsghana.com/live/server.php?request=track&amp;output=jcrpt&amp;nse=0.2212580339760184"></script></div>
                           <script language="JavaScript" type="text/javascript">
 
 <!--
