--- a/r/ro/roc/rockband.com.html
+++ b/r/ro/roc/rockband.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rockband.com privacy policy that was archived on 2010-02-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100216040052id_/http%3A//www.rockband.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rockband.com privacy policy that was archived on 2010-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100902165942id_/http%3A//www.rockband.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -466,7 +466,7 @@
   <div id="footer" class="wipe">
     <ul class="f-nav">
       <li id="f-support"><a href="/support"><span>Game Support</span></a></li>
-      <li id="f-aboutus"><a href="/about"><span>About Us</span></a></li>
+      <li id="f-press"><a href="/press"><span>Press</span></a></li>
       <li id="f-contactus"><a href="/contact"><span>Contact Us</span></a></li>
       <li id="f-forumrules"><a href="/forum_rules"><span>Forum Rules</span></a></li>
       <li id="f-partners"><a href="/partners"><span>Partners</span></a></li>
@@ -501,7 +501,7 @@
 
 <script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
 
-<script language="JavaScript" type="text/javascript" src="/js/mtvi_rockbandgame/mtvi_rockband.js"></script><div style="position:absolute; visibility:hidden; width:1px; height:1px; border:0px; top:-100px; left:-100px" id="urchin"></div><div style="display:none;" id="s_code"><img name="s_i_viarockband" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/viarockband/1/H.1-pdv-2/s69562399280997?[AQB]&amp;ndh=1&amp;t=31/0/2020%201%3A9%3A27%205%200&amp;pageName=/web/20100216040052id_/http%253A//www.rockband.com/privacy&amp;g=https%3A//web.archive.org/web/20100216040052id_/http%253A//www.rockband.com/privacy&amp;h1=/web/20100216040052id_/http%253A//www.rockband.com/privacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"></div><script src="https://web.archive.org/web/20100326005835/https://sb.scorecardresearch.com/beacon.js?c1=2&amp;c2=6036034&amp;c3=&amp;c4=web.archive.org/web/20100216040052id_/http://www.rockband.com/privacy&amp;c5=20000&amp;c6=&amp;c15="></script>
+<script language="JavaScript" type="text/javascript" src="/js/mtvi_rockbandgame/mtvi_rockband.js"></script><div style="position:absolute; visibility:hidden; width:1px; height:1px; border:0px; top:-100px; left:-100px" id="urchin"></div><div style="display:none;" id="s_code"><img name="s_i_viarockband" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/viarockband/1/H.1-pdv-2/s66724249127042?[AQB]&amp;ndh=1&amp;t=31/0/2020%201%3A9%3A24%205%200&amp;pageName=/web/20100902165942id_/http%253A//www.rockband.com/privacy&amp;g=https%3A//web.archive.org/web/20100902165942id_/http%253A//www.rockband.com/privacy&amp;h1=/web/20100902165942id_/http%253A//www.rockband.com/privacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"></div><script src="https://web.archive.org/web/20100326005835/https://sb.scorecardresearch.com/beacon.js?c1=2&amp;c2=6036034&amp;c3=&amp;c4=web.archive.org/web/20100902165942id_/http://www.rockband.com/privacy&amp;c5=20000&amp;c6=&amp;c15="></script>
 
 
 </strong></body></html>
