--- a/m/my/myv/myvideofight.com.html
+++ b/m/my/myv/myvideofight.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myvideofight.com privacy policy that was archived on 2010-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100624021319id_/http%3A//www.lowkick.com/data/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myvideofight.com privacy policy that was archived on 2010-09-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100903142507id_/http%3A//www.lowkick.com/data/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <meta name="description" content="Privacy Policy MMA Videos, News and Rumors submitted and voted by LowKick.com's fans | LowKick.com">
@@ -8,7 +8,6 @@
    <link rel="stylesheet" href="/css/lowkick_new.css" type="text/css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
 <script type="text/javascript" src="/js/main.js"></script>
-  
 <!--registeredJs-->
 <!-- ADS WILL NOT DISPLAY WITHOUT THE HEADER SCRIPT INSTALLED -->
     <!-- begin script to create random number for ads -->
@@ -42,31 +41,53 @@
 
             <ul class="mainmenu">
     <li class="first"><a class="mma" href="/">MMA</a></li>
-    <li><a class="videos videos" href="/Videos">Videos</a></li> 
     <li><a class="news news" href="/News">News</a></li> 
+    <li><a class="videos videos" href="/Videos">Videos</a></li> 
     <li><a class="images images" href="/Images">Images</a></li> 
     <li><a class="polls polls" href="/Polls">Polls</a></li> 
     <li><a class="fans fans" href="/fans">Fans</a></li>
-    <li><a class="events events" style="color:#910101;" href="/events/">Picks &amp; Events</a></li>
+    <li><a class="picks picks" href="/fans/topLowPickers/">Picks</a></li>
+    <li><a class="events events" href="/events/">Events</a></li>
     <li><a class="trivia trivia" href="/trivia">Trivia</a></li>
-    <li><a class="store store" href="/store">MMA Store</a></li> 
+    <li><a class="store store" href="/store">Store</a></li> 
+    <li><a class="blogkick blogkick" href="/fans/blogkick/2"></a></li> 
+    <li><a class="rest rest" href="#"></a></li> 
 </ul>
 <ul class="submenu">
-                            <li><a class="UFC UFC " href="/UFC">UFC</a></li>
-                                <li><a class="Strikeforce Strikeforce " href="/Strikeforce">Strikeforce</a></li>
-                                <li><a class="Dream Dream " href="/Dream">Dream</a></li>
-                                <li><a class="K-1 K-1 " href="/K-1">K-1</a></li>
-                                <li><a class="WEC WEC " href="/WEC">WEC</a></li>
-                                <li><a class="TV-Shows TV-Shows " href="/TV-Shows">TV-Shows</a></li>
-                                <li><a class="Pride Pride " href="/Pride">Pride</a></li>
-                                <li><a class="Other Other " href="/Other">Other</a></li>
-            <li class="search spriteImage"><form id="formsearch" action="" onsubmit="searchsite(searchString.value);return false;"><input class="searchTextBox" name="searchString" type="text"><span class="magspan"><input type="submit" class="butMag iconSpriteImage" value="" id="submitsearch"></span></form></li> 
+    <li><a class="UFC UFC" href="/UFC">UFC</a></li>
+    <li><a class="Strikeforce Strikeforce" href="/Strikeforce">Strikeforce</a></li>
+    <li><a class="WEC WEC" href="/WEC">WEC</a></li>
+    <li><a class="Dream Dream" href="/Dream">Japan</a></li>
+    <li><a class="K-1 K-1" href="/K-1">K-1</a></li>
+    <li><a class="Other Other" href="/Other">Other</a></li>
+    <li><a class="restCats restCats" href="#"></a></li> 
+    <li class="search spriteImage"><form id="formsearch" action="" onsubmit="searchsite(searchString.value);return false;"><input class="searchTextBox" name="searchString" type="text"><span class="magspan"><input type="submit" class="butMag iconSpriteImage" value="" id="submitsearch"></span></form></li>
     </ul>
             
-                           <span class="leaderboard"><script type="text/javascript">
-  document.write('<scr' + 'ipt type="text/javascript" src="http://ad.doubleclick.net/adj/sgi.myvideofight/mm/home;id=750321;ch=mm;ssp=adv;ssp=aviate;ssp=bmx;ssp=baseb;ssp=base;ssp=billd;ssp=bowl;ssp=box;ssp=camp;ssp=cas;ssp=crick;ssp=cycle;ssp=drag;ssp=fntsy;ssp=fpsball;ssp=fldhky;ssp=f1;ssp=gmes;ssp=gf;ssp=hky;ssp=hunt;ssp=iskt;ssp=kbrd;ssp=mma;ssp=mgp;ssp=mtx;ssp=mtb;ssp=nascar;ssp=ofrally;ssp=openw;ssp=outgam;ssp=padd;ssp=chute;ssp=rock;ssp=rgby;ssp=run;ssp=scub;ssp=skt;ssp=ski;ssp=sbrd;ssp=scr;ssp=sqsh;ssp=surf;ssp=swm;ssp=ten;ssp=wake;ssp=walk;ssp=wlift;ssp=wrest;ssp=yog;zn=home;pos=af;dcopt=ist;sz=728x90;tile='+sgi_tile+';ord='+sgi_ord+'?"></scr' + 'ipt>');
-  sgi_tile++;
-</script><script type="text/javascript" src="http://ad.doubleclick.net/adj/sgi.myvideofight/mm/home;id=750321;ch=mm;ssp=adv;ssp=aviate;ssp=bmx;ssp=baseb;ssp=base;ssp=billd;ssp=bowl;ssp=box;ssp=camp;ssp=cas;ssp=crick;ssp=cycle;ssp=drag;ssp=fntsy;ssp=fpsball;ssp=fldhky;ssp=f1;ssp=gmes;ssp=gf;ssp=hky;ssp=hunt;ssp=iskt;ssp=kbrd;ssp=mma;ssp=mgp;ssp=mtx;ssp=mtb;ssp=nascar;ssp=ofrally;ssp=openw;ssp=outgam;ssp=padd;ssp=chute;ssp=rock;ssp=rgby;ssp=run;ssp=scub;ssp=skt;ssp=ski;ssp=sbrd;ssp=scr;ssp=sqsh;ssp=surf;ssp=swm;ssp=ten;ssp=wake;ssp=walk;ssp=wlift;ssp=wrest;ssp=yog;zn=home;pos=af;dcopt=ist;sz=728x90;tile=1;ord=7564931861808779?"></script></span>
+                           <span class="leaderboard"><!--- Here is the Open AdStream JX Code  for the low_kick Leaderboard position --->
+<script type="text/javascript">
+<!--
+
+    OAS_url = 'http://oasc247.bnqt.com';
+    OAS_sitepage = 'low_kick';
+    OAS_pos = 'Top1';
+    OAS_query = '';
+
+    var OAS_RN = new String (Math.random());
+    var OAS_RNS = OAS_RN.substring (2,11);
+
+    document.write('<scr' + 'ipt type="text/javascript" src="' + OAS_url + '/RealMedia/ads/adstream_jx.ads/' + OAS_sitepage + '/1' + OAS_RNS + '@' + OAS_pos + '?' + OAS_query + '"></scr' + 'ipt>');
+
+// -->
+</script><script type="text/javascript" src="http://oasc247.bnqt.com/RealMedia/ads/adstream_jx.ads/low_kick/1546062399@Top1?"></script>
+<noscript>
+    <a href="http://oasc247.bnqt.com/RealMedia/ads/click_nx.ads/low_kick/@Top1">
+        <img src="http://oasc247.bnqt.com/RealMedia/ads/adstream_nx.ads/low_kick/@Top1" border="0" />
+    </a>
+</noscript>
+
+
+<!--- End Leaderboard Position  --></span>
                 </div>
    <!--/header -->
 </div>
@@ -150,8 +171,12 @@
 
                         <dl>
                 <dt>Games &amp; Competition</dt>
-                <dd><a href="/fans/blogkick">BlogKick Leaders</a></dd> 
-                <dd><a href="/fans/topLowPickers/">LowPick Leaders</a></dd> 
+                <dd><a href="/fans/blogkick/1">BlogKick Season 1</a></dd> 
+                <dd><a href="/fans/blogkick/2">BlogKick Season 2</a></dd> 
+                <dd><a href="/fans/topLowPickers">LowPickers All Time</a></dd> 
+                <dd><a href="/fans/topLowPickers">MMA Picks</a></dd> 
+                <dd><a href="/trivia">MMA Trivia</a></dd> 
+
             </dl>
                     <!--        <dl><dt>Top Players</dt></dl>
         <dl><dt>Top Teams</dt></dl>
@@ -174,7 +199,9 @@ pageTracker._trackPageview();
 } catch(err) {}</script> 
 
 <script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php"></script>
-<script type="text/javascript">FB.init("2896af32e0fb676dd473c771584a712a","/xd_receiver.htm", {  permsToRequestOnConnect: 'email, publish_stream'  });</script>
+<script type="text/javascript">
+	 FB.init("2896af32e0fb676dd473c771584a712a", "/xd_receiver.htm", { "permsToRequestOnConnect": "email,user_birthday,status_update,publish_stream" });
+</script>
 <script src="http://network.yardbarker.com/network/ybn_pixel/8096" type="text/javascript"></script> <noscript></noscript>
 
 
