--- a/i/ig/igc/igcar.gov.in.html
+++ b/i/ig/igc/igcar.gov.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the igcar.gov.in privacy policy that was archived on 2010-05-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100504052831id_/http%3A//www.igcar.gov.in/igc2004/private.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the igcar.gov.in privacy policy that was archived on 2010-09-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100903192951id_/http%3A//www.igcar.gov.in/igc2004/private.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Private Policy</title>
  <meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
@@ -21,6 +21,9 @@
  us, we recommend that you do NOT include any other personal information.</font></p>
  <hr noshade="" color="#3366CC">
  
+ <p align="right"><span style="font-size: 11pt">
+ 	<font face="Verdana" size="2">
+ <a href="http://www.igcar.gov.in"><font color="#0000FF">Back to Home</font></a></font></span></p>
  <p><i><font face="Times New Roman" size="2">Site Owned &amp; Maintained by: <br>
  Indira Gandhi Centre for Atomic Research,
  <br>
