--- a/d/dr/dre/dreamwidth.org.html
+++ b/d/dr/dre/dreamwidth.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dreamwidth.org privacy policy that was archived on 2010-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100621064725id_/http%3A//www.dreamwidth.org/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dreamwidth.org privacy policy that was archived on 2010-09-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100904002916id_/http%3A//www.dreamwidth.org/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>
@@ -32,8 +32,8 @@
                 Site[site_k[i]] = site_p[site_k[i]];
             }
        </script>
-    <script type="text/javascript" src="http://s.dreamwidth.org/js/??core.js,dom.js,httpreq.js,livejournal.js,esn.js,ippu.js,lj_ippu.js,hourglass.js,contextualhover.js,nav.js?v=1275879814"></script>
-<link rel="stylesheet" type="text/css" href="http://s.dreamwidth.org/stc/??lj_base.css,esn.css,contextualhover.css,lj_base-app.css,tropo/reset.css,tropo/tropo-base.css,tropo/tropo-red.css?v=1272661670">
+    <script type="text/javascript" src="http://s.dreamwidth.org/js/??core.js,dom.js,httpreq.js,livejournal.js,esn.js,ippu.js,lj_ippu.js,hourglass.js,contextualhover.js,nav.js?v=1280386828"></script>
+<link rel="stylesheet" type="text/css" href="http://s.dreamwidth.org/stc/??lj_base.css,esn.css,contextualhover.css,lj_base-app.css,tropo/reset.css,tropo/tropo-base.css,tropo/tropo-red.css?v=1280680199">
 
 
     
@@ -211,20 +211,20 @@
 
                 </div>
                 <div id="account-links">
-                    <form action="http://www.dreamwidth.org/login?ret=1" method="post"><input type="hidden" name="returnto"><input type="hidden" name="chal" class="lj_login_chal" value="c0:1277100000:2845:300:h00NQiR6F6fYIaBCxPIL:f67a810eca420b767d5299fa44021c38">
+                    <form action="http://www.dreamwidth.org/login?ret=1" method="post"><input type="hidden" name="returnto"><input type="hidden" name="chal" class="lj_login_chal" value="c0:1283558400:1756:300:Ne21yUxEYLoazfttB61v:36d3eca751bcf5ba4cd9dac4ba21a894">
 <input type="hidden" name="response" class="lj_login_response" value="">
 <table id="login-table"><tbody><tr><td><label for="login_user">Account name:</label></td><td class="input-cell" colspan="2"><input type="text" maxlength="27" tabindex="1" name="user" id="login_user" size="20" aria-required="true"> <a href="http://www.dreamwidth.org/openid/" tabindex="5">Log in with OpenID?</a></td></tr><tr><td><label for="login_password">Password:</label></td><td class="input-cell" colspan="2"><input type="password" tabindex="2" name="password" id="login_password" size="20" aria-required="true"> <a href="http://www.dreamwidth.org/lostinfo" tabindex="6">Forget your password?</a></td></tr><tr><td>&nbsp;</td><td class="remember-me-cell"><input type="checkbox" tabindex="3" value="1" name="remember_me" id="login_remember_me"> <label for="login_remember_me">Remember me</label></td><td><input type="submit" name="login" value="Log in" tabindex="4"></td></tr></tbody></table></form>
 
                 </div>
                 <div id="menu">
                     <ul>
-<li id="create_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav?cat=create">Create</a>
+<li id="create_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav/create">Create</a>
 <ul id="create_subnav" class="subnav_container">
 <li class="subnav"><a href="http://www.dreamwidth.org/create">Create Account</a></li>
 <li class="subnav"><a href="http://www.dreamwidth.org/manage/settings/?cat=display">Display Preferences</a></li>
 </ul>
 </li>
-<li id="explore_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav?cat=explore">Explore</a>
+<li id="explore_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav/explore">Explore</a>
 <ul id="explore_subnav" class="subnav_container">
 <li class="subnav"><a href="http://www.dreamwidth.org/interests">Interests</a></li>
 <li class="subnav"><a href="http://www.dreamwidth.org/directorysearch">Directory Search</a></li>
@@ -235,7 +235,7 @@
 <li class="subnav"><a href="http://www.dreamwidth.org/support/faq">FAQ</a></li>
 </ul>
 </li>
-<li id="shop_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav?cat=shop">Shop</a>
+<li id="shop_topnav" class="topnav"><a href="http://www.dreamwidth.org/nav/shop">Shop</a>
 <ul id="shop_subnav" class="subnav_container">
 <li class="subnav"><a href="http://www.dreamwidth.org/shop">Buy Dreamwidth Services</a></li>
 <li class="subnav"><a href="http://www.dreamwidth.org/shop/randomgift">Gift a Random User</a></li>
@@ -245,7 +245,7 @@
 </ul>
 
 
-                    <div class="appwidget appwidget-search" id="LJWidget_5">
+                    <div class="appwidget appwidget-search" id="LJWidget_20">
 <form action="http://www.dreamwidth.org/multisearch" method="post">
 <input type="text" name="q" title="Search" class="text" id="search" size="20"> <select name="type" class="select">
 <option value="int" selected="selected">Interest</option>
