--- a/t/th/thr/thrifty.co.uk.html
+++ b/t/th/thr/thrifty.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thrifty.co.uk privacy policy that was archived on 2008-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080608103708id_/http%3A//www.thrifty.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thrifty.co.uk privacy policy that was archived on 2010-09-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100905055235id_/http%3A//www.thrifty.co.uk/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy - Thrifty Car Rental </title>
@@ -10,55 +10,11 @@
 <meta name="Coverage" content="Worldwide">
 <meta name="rating" content="General">
 <meta name="revisit-after" content="15 days">
-<script type="text/javascript" src="/js/navigation.js"></script>
-<script type="text/javascript" language="javascript" src="/js/validate.js"> </script>
-<script type="text/javascript" src="/js/ajax.js"></script>
-<script type="text/javascript" language="javascript" src="/js/cookies.js"></script>
-<script type="text/javascript" language="javascript" src="/js/prototype.lite.js"></script>
-<script type="text/javascript" language="javascript" src="/js/scroller.js"></script>
-<!--<link rel="icon" href="/favicon.ico" type="image/ico"> Could add this if needed -->
+<link href="/css/multibox.css" rel="stylesheet" type="text/css">
 <link href="/css/car-hire.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 <!-- A DMR service. DMR is a trademark of DMR Limited www.dmr.co.uk -->
   <body id="home" stats="1">
-<!--BEGINNING OF LiveSTATS.NET STATSCRIPT-->
-<script language="javascript">
-var DMdomain = "";
-var DMpage = window.location;
-var DMVersion = 86;
-var DMsendTo = "//collector.deepmetrix.com/dm.gif?";
-var DMsession;
-function dmerr(){return true;}window.onerror=dmerr;
-var u3k8u6y1j3 = new Date();
-if (navigator.userAgent.indexOf('Mac') >= 0 &&
-u3k8u6y1j3.getTimezoneOffset() >= 720){
-u3k8u6y1j3.setTime (u3k8u6y1j3.getTime() - 1440*60*1000);}
-var u3k8u6y1 = location.protocol+DMsendTo+"v="+DMVersion+"&vst=1";
-var u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf("_dmid") ==
--1)
-{DMsession = parseInt( Math.random()*1000000 ) + "_" +
-u3k8u6y1j3.getTime();
-var u3k8 = "";if(DMdomain != ""){u3k8 = "domain="+ DMdomain +";";}
-document.cookie = "_dmid=" + DMsession + ";expires=Mon, 31-Dec-2008 00:00:00 GMT;"+u3k8+"path=/;";}
-u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf('_dmid') ==
--1){DMsession = "";}
-else{if(u3k8u6.indexOf(';') == -1){u3k8u6 = u3k8u6.replace(/_dm/g,
-';_dm');}var u3 = u3k8u6.indexOf("_dmid=") + 6;
-var g5b1z7i5z6 = u3k8u6.indexOf(";",u3);if (g5b1z7i5z6 == -1){g5b1z7i5z6
-= u3k8u6.length;}
-DMsession = unescape(u3k8u6.substring(u3,g5b1z7i5z6));}
-u3k8u6y1 += "&id="+DMsession+"&url="+escape(DMpage) +
-"&ref="+escape(document.referrer)+"&lng=" + 
-((!document.all || navigator.userAgent.match('Opera')) ?
-navigator.language : navigator.userLanguage) + 
-"&tz=" + (Math.round(new Date('dec 1, 2002').getTimezoneOffset()/60)*-1);
-if(screen){u3k8u6y1 += "&scr=" + escape( screen.width + "x" +
-screen.height + " " + screen.colorDepth + "bpp" );}
-u3k8u6y1 += "&rnd=" + new Date().getTime();if(document.layers){
-document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1+"\" height=1 width=1></la"+"yer>");
-}else{document.write("<di"+"v id=\"DMStats\" STYLE=\"position:absolute;visibility:hidden;\"><img src=\""+u3k8u6y1+"\" height=1 width=1></di"+"v>");}
-</script><div id="DMStats" style="position:absolute;visibility:hidden;"><img src="https://collector.deepmetrix.com/dm.gif?v=86&amp;vst=1&amp;id=&amp;url=https%3A//web.archive.org/web/20080608103708id_/http%253A//www.thrifty.co.uk/privacy-policy.htm&amp;ref=&amp;lng=en-US&amp;tz=0&amp;scr=800x600%2024bpp&amp;rnd=1580452144865" height="1" width="1"></div>
-<!--END OF LiveSTATS.NET STATSCRIPT-->
 <!-- sets the small curve top of page -->
 <div id="curve">
 <img src="/images/thrifty-car.gif" alt="thrifty car hire" width="774" height="9" border="0"></div>
@@ -69,10 +25,10 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <div id="nav">
 <ul>
 <li id="nav-home"><a href="http://www.thrifty.co.uk">Home</a></li>
-<li id="nav-loc"><a href="http://www.thrifty.co.uk/locations.htm">Location Finder </a></li>
-<li id="nav-hot"><a href="http://www.thrifty.co.uk/special-offers.htm">Hot Deals </a></li>
-<li id="nav-overseas"><a href="http://prepaid.thrifty.co.uk/">Overseas Hire </a></li>
-<li id="nav-contact"><a href="http://www.thrifty.co.uk/contact-us.htm">Contact</a></li>
+<li id="nav-loc"><a href="http://www.thrifty.co.uk/locations.htm">Locations</a></li>
+<li id="nav-overseas"><a href="http://prepaid.thrifty.co.uk/">Overseas</a></li>
+<li id="nav-contact"><a href="http://www.thrifty.co.uk/contact-us.htm">Contact Us</a></li>
+<li id="nav-mybooking"><a href="http://www.thrifty.co.uk/my-booking.htm">My Booking</a></li>
 </ul></div>
 <!-- rental nav is where welcome to thrifty text -->
 <div id="rental-nav" class="clearfix">
@@ -84,7 +40,7 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <div id="contentpage-right-frame">
 <br>
 <br>
-<a href="/special-offers.htm"><img src="http://www.thrifty.co.uk/bannerads/116228866114725.jpg" alt="Hot Deals Car Hire" border="0" width="245" height="132"></a>
+
 
 
 
@@ -94,20 +50,28 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <h1>Privacy Policy</h1>
 <div class="content-sub-page-container-top"><img src="/images/c-top.gif" width="495" height="9" alt="."></div>
 <div class="content-sub-page-container-body">
-<table cellpadding="6" cellspacing="6" id="greylinks"><tbody><tr><td valign="top">
+<table cellpadding="6" cellspacing="6" id="bluelinks"><tbody><tr><td valign="top">
 <p>
-<strong>Collection of your Personal Information</strong><br><br>The collection of personal data is necessary to rent a car. We ask for your name, address, telephone number and email address. This helps us to process your booking, to contact you if we have any problems with your request or to send you an electronic confirmation of the booking. We gather this information from our Web Site and share this with our Licensees who will provide you the vehicle. <br><br><strong>Use of your Personal Information</strong><br><br>We maintain the personal information provided via this Web Site as part of our records to assist us to maintain and improve our administration and management of our car rental business. We will only communicate with you to market our services, and those of our business partners. <br><br><strong>Promotions</strong><br><br>If you enter any promotions or competitions on our site, we will ask you to provide your personal details so we can contact you if necessary. If a prize is offered through a third party, we may need to disclose information to that relevant party in order to facilitate the distribution of prizes. <br><br><strong>Third Party Web Sites</strong><br><br>Our Web Site may contain links to third party web sites. We do not monitor or control the information collected when you choose to "click through" links to these websites.<br><br><strong>Control of your Personal Information</strong><br><br>Customers are welcome to see the personal details records held about them at any time and to advise us of any amendments to keep the information up to date. We have strict procedures for storing and disclosure of personal information to prevent unauthorised access. Therefore we may ask for proof of identity before we disclose any information to you. Please address requests to: <br><br>The Marketing Department,<br>Thrifty Car Rental<br>Scot Group Ltd<br>Flightform House<br>Halifax Road<br>Cressex Business Park<br>High Wycombe<br>HP12 3SN <br><br><strong>Your Consent</strong><br><br>By accessing the Web Site or by entering into a rental agreement with us, or with our Licensees, and by giving us your personal details, you are agreeing to the collection, storage and processing of your personal information by Thrifty. <br><br><strong>Policy Changes</strong><br><br>If we decide to change our online privacy policy, we will post the changes here, so you will always know what information we gather and how we use that information. <br><br><strong>In summary</strong><br><br>We are committed to protecting your privacy. We will not share your details with a third party. We will only communicate with you to market our services, and those of our business partners. However, we reserve the right to pass your information to third parties, if obliged by law to do so. <br><!--last updated: 20061011160633-->
+<strong>Collection of your Personal Information</strong><br><br>The collection of personal data is necessary to rent a car. We ask for your name, address, telephone number and email address. This helps us to process your booking, to contact you if we have any problems with your request or to send you an electronic confirmation of the booking. We gather this information from our Web Site and share this with our Locations who will provide you the vehicle. <br><br><strong>Use of your Personal Information</strong><br><br>We maintain the personal information provided via this Web Site as part of our records to assist us to maintain and improve our administration and management of our car rental business. We will only communicate with you to market our services, and those of our business partners. <br><br><strong>Promotions</strong><br><br>If you enter any promotions or competitions on our site, we will ask you to provide your personal details so we can contact you if necessary. If a prize is offered through a third party, we may need to disclose information to that relevant party in order to facilitate the distribution of prizes. <br><br><strong>Third Party Web Sites</strong><br><br>Our Web Site may contain links to third party web sites. We do not monitor or control the information collected when you choose to "click through" links to these websites.<br><br><strong>Control of your Personal Information</strong><br><br>Customers are welcome to see the personal details records held about them at any time and to advise us of any amendments to keep the information up to date. We have strict procedures for storing and disclosure of personal information to prevent unauthorised access. Therefore we may ask for proof of identity before we disclose any information to you. Please address requests to: <br><br>The Marketing Department,<br>Thrifty Car Rental<br>Scot House<br>Halifax Road<br>Cressex Business Park<br>High Wycombe<br>HP12 3SN <br><br><strong>Your Consent</strong><br><br>By accessing the Web Site or by entering into a rental agreement with us and by giving us your personal details, you are agreeing to the collection, storage and processing of your personal information by Thrifty. <br><br><strong>Policy Changes</strong><br><br>If we decide to change our online privacy policy, we will post the changes here, so you will always know what information we gather and how we use that information. <br><br><strong>In summary</strong><br><br>We are committed to protecting your privacy. We will not share your details with a third party. We will only communicate with you to market our services, and those of our business partners. However, we reserve the right to pass your information to third parties, if obliged by law to do so. <br><!--last updated: 20100505140448-->
 </p>
 </td></tr></tbody></table>
 <p><a href="javascript:history.go(-1)">Go Back</a></p>
 </div>
 <div class="content-sub-page-container-bot"><img src="/images/c-bot.gif" alt="bot" width="495" height="8"></div>
-<p>Scot Group Ltd  t/a Thrifty Car Rental<br>12 Marsh Barton Road, Marsh Barton Trading Estate, Exeter EX2 8LW<br>Tel: 01392 411171 Fax: 01392 666479<br>Registered in England 1425565. VAT reg: GB 744 5132 44.<br>Member of the British Vehicle Rental and Leasing Association<br>Service provider: <span id="dmrtext"><a href="http://www.dmr.co.uk" class="dmrtext">DMR</a></span> Limited, DMR House, 8-10 Cleave Avenue, Farnborough, Kent BR6 7DR.</p>
+<p>Thrifty Car and Van Rental<br>12 Marsh Barton Road, Marsh Barton Trading Estate, Exeter EX2 8LW<br>Tel: 01392 411171 Fax: 01392 666479<br>Registered in England 1425565. VAT reg: GB 744 5132 44.<br>Member of the British Vehicle Rental and Leasing Association<br>Service provider: <span id="dmrtext"><a href="http://www.dmr.co.uk" class="dmrtext">DMR</a></span> Limited, DMR House, 8-10 Cleave Avenue, Farnborough, Kent BR6 7DR.</p>
 </div>
 <!-- Footer -->	
+<div class="socialBookmarks"><strong>Bookmark &amp; Share</strong> &nbsp; 
+<a rel="nofollow" target="_blank" href="/cgi-bin/gen5?runprog=thuk&amp;socialnetwork=A"><img src="http://www.thrifty.co.uk/images/bookmarks/delicious.gif" alt="Bookmark with Del.icio.us" title="Bookmark with Del.icio.us"></a>
+<a rel="nofollow" target="_blank" href="/cgi-bin/gen5?runprog=thuk&amp;socialnetwork=B" title="Twitter"><img src="http://www.thrifty.co.uk/images/bookmarks/twitter.gif" alt="Twitter" title="Twitter"></a>
+<a rel="nofollow" target="_blank" href="/cgi-bin/gen5?runprog=thuk&amp;socialnetwork=C"><img src="http://www.thrifty.co.uk/images/bookmarks/facebook.gif" alt="Share on Facebook" title="Share on Facebook"></a>
+<a rel="nofollow" target="_blank" href="/cgi-bin/gen5?runprog=thuk&amp;socialnetwork=D"><img src="http://www.thrifty.co.uk/images/bookmarks/yahoo.gif" alt="Bookmark with Yahoo" title="Bookmark with Yahoo"></a>
+<a rel="nofollow" target="_blank" href="/cgi-bin/gen5?runprog=thuk&amp;socialnetwork=E"><img src="http://www.thrifty.co.uk/images/bookmarks/google.gif" alt="Bookmark with Google" title="Bookmark with Google"></a>
+</div>
 <div id="footer">
-<div id="footer-copyright"><span class="copyright">© Copyright 2008 Thrifty Car and Van Rental - Car Hire and Van Hire UK. All rights reserved.
-</span></div>
+<div id="footer-copyright"><span class="copyright">© Copyright 2010 Thrifty Car and Van Rental - Car Hire and Van Hire UK. All rights reserved.
+</span>
+</div>
 <div id="footer-content">
 <ul id="secondary-navigation">
 <li id="nav-location">Location Finder
@@ -124,7 +88,6 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <li><a href="http://www.thrifty.co.uk/prestige/car-hire.htm">Prestige car hire</a></li>
 <li><a href="http://www.thrifty.co.uk/vehicle-guide.htm">Vehicle guide</a></li>
 <li><a href="http://www.thrifty.co.uk/uk-booking-guide.htm">Rental terms</a></li>
-<li><a href="http://www.thrifty.co.uk/privacy-policy.htm">Privacy policy</a></li>
 </ul>
 </li>
 <li id="nav-business">Business services
@@ -140,6 +103,7 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 <li><a href="http://www.thrifty.co.uk/about-us.htm">About us</a></li>
 <li><a href="http://www.thrifty.co.uk/feed-back.htm">Feedback</a></li>
 <li><a href="http://www.thrifty.co.uk/recruitment.htm">Recruitment</a></li>
+<li><a href="http://www.thrifty.co.uk/privacy-policy.htm">Privacy policy</a></li>
 </ul>
 </li>
 <li id="nav-bookings">Bookings
@@ -155,16 +119,30 @@ document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1
 </div> 
 </div>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-17413859-1']);
+_gaq.push(['_trackPageview']);
+(function() {
+var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
 </script>
+<script type="text/javascript" src="/js/mootools.js"></script>
+<script type="text/javascript" src="/js/overlay.js"></script>
+<script type="text/javascript" src="/js/multibox.js"></script>
 <script type="text/javascript">
-_uacct = "UA-810633-1";
-urchinTracker();
+var box = {};
+window.addEvent('domready', function() {
+box = new MultiBox('mb', {useOverlay: true,showControls: false});
+});
 </script>
-<script type="text/javascript">
-_uacct = "UA-4165279-1";
-urchinTracker();
-</script>
+<script type="text/javascript" src="/js/navigation.js"></script>
+<script type="text/javascript" language="javascript" src="/js/validate.js"> </script>
+<script type="text/javascript" src="/js/ajax.js"></script>
+<script type="text/javascript" language="javascript" src="/js/cookies.js"></script>
+<!--<link rel="icon" href="/favicon.ico" type="image/ico"> Could add this if needed -->
 
 
 </body></html>
