prleap.com (archived on 2010-09-05)
{
  "alexa_rank": 23159,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8427,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.67,
  "homepage_snapshot_redirected_domain": "prleap.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100929164857id_/http://www.prleap.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100929164857id_/http%3A//prleap.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "prleap.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100905132531id_/http%3A//www.prleap.com/privacy",
  "policy_title": "PR Leap: Privacy Policy",
  "policy_url": "prleap.com/privacy",
  "sha1": "e81b3699f8aa7738282acf78aa2fbcc0ae410e80",
  "simhash": 15115343856235336136,
  "simhash_updated": false,
  "site_hostname": "prleap.com",
  "site_url": "http://prleap.com",
  "smog": 16.07,
  "strict_updated": false,
  "timestamp": "20100905132531",
  "word_count": 1344,
  "year": 2010
}

--- a/p/pr/prl/prleap.com.html
+++ b/p/pr/prl/prleap.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the prleap.com privacy policy that was archived on 2010-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100603034401id_/http%3A//www.prleap.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prleap.com privacy policy that was archived on 2010-09-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100905132531id_/http%3A//www.prleap.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>PR Leap: Privacy Policy</title>
 <meta name="description" content="PR Leap is an online press release distribution service, since 2003. Over 30,000 companies use PR Leap to send out social media and SEO press releases to search engines, newswires, and websites.">
 <meta name="keywords" content="search visibility, press release distribution, PR Leap, press release, newswire, news, search engine optimization, search marketing, submit press release, rss, public relations, publicity">
-<link rel="stylesheet" href="http://www.prleap.com/includes/prleap.css" type="text/css">
+<link rel="stylesheet" href="http://www.prleap.com/includes/prleap.css.php" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS 1.0" href="http://www.prleap.com/xml/index/">
 </head>
 <body id="privacy" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
@@ -99,11 +99,9 @@ The Site is not directed to persons under 18. If a parent or guardian becomes aw
 
 <!-- Begin Footer -->
 <div id="footer">
-If you have any questions regarding information in these press releases, please contact the company listed in the release.<br> Issuers of press releases and not PR LEAP are solely responsible for the accuracy of the information they contain.<br> <a href="http://www.prleap.com/disclaimer">Complete PR LEAP Disclaimer</a>
-<p>
 PR Leap is a service of <a href="http://www.condesainc.com/">Condesa</a>, Inc. © 2009 &nbsp;
-</p><p>
-<a href="http://www.prleap.com/privacy">Privacy Policy</a> | <a href="http://www.prleap.com/terms">Terms of Service</a> | <a href="http://www.prleap.com/dmca">Copyright / IP Policy</a> | <a href="http://www.prleap.com/editorial_guidelines">Editorial Guidelines</a>
+<p>
+<a href="http://www.prleap.com/disclaimer">Disclaimer</a> | <a href="http://www.prleap.com/privacy">Privacy Policy</a> | <a href="http://www.prleap.com/terms">Terms of Service</a> | <a href="http://www.prleap.com/dmca">Copyright / IP Policy</a> | <a href="http://www.prleap.com/editorial_guidelines">Editorial Guidelines</a>
 </p><div>
 <!-- End Footer -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
