iboats.com (archived on 2010-09-06)
{
  "alexa_rank": 19386,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 3623,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.16,
  "homepage_snapshot_redirected_domain": "iboats.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100906101546id_/http://www.iboats.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100906101546id_/http%3A//iboats.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "iboats.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100906094735id_/http%3A//www.iboats.com/aboutus_privacy.html",
  "policy_title": "About iboats.com - Privacy Policies",
  "policy_url": "iboats.com/aboutus_privacy.html",
  "sha1": "0b93e72581246708d09000bebef23b9d07b8e31c",
  "simhash": 6564266181275724709,
  "simhash_updated": true,
  "site_hostname": "iboats.com",
  "site_url": "http://iboats.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100906094735",
  "word_count": 603,
  "year": 2010
}

--- a/i/ib/ibo/iboats.com.html
+++ b/i/ib/ibo/iboats.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iboats.com privacy policy that was archived on 2010-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100531034107id_/http%3A//www.iboats.com/aboutus_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iboats.com privacy policy that was archived on 2010-09-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100906094735id_/http%3A//www.iboats.com/aboutus_privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>About iboats.com - Privacy Policies</title>
@@ -38,7 +38,7 @@
 	  <tbody><tr>
 		  <td><a href="http://www.iboats.com/Boat-Parts-Accessories/dm/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/marine-mega-mall_blue.png" alt="Boat Parts &amp; Accessories" name="marinemegamall_blue" width="106" height="28" border="0" id="marinemegamall_blue"></a></td>
 		  <td><a href="http://www.iboats.com/New-Boats/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/new_boats.png" name="newboats_blue" width="91" height="28" border="0" alt=""></a></td>
-		  <td><a href="http://www.iboats.com/boats/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/boat_classifieds_blue.png" alt="" name="boat_classifieds_blue" width="124" height="28" border="0" id="boat_classifieds_blue"></a></td>
+		  <td><a href="http://boats.iboats.com/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/boat_classifieds_blue.png" alt="" name="boat_classifieds_blue" width="124" height="28" border="0" id="boat_classifieds_blue"></a></td>
 		  <td><a href="http://www.boatmotors.com/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/boat-motors_blue.png" alt="" name="boatmotors_blue" width="104" height="28" border="0" id="boatmotors_blue"></a></td>
 		  <td><a href="http://www.allboatinsurance.com/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/boat-insurance_blue.png" alt="" name="boatinsurance_blue" width="108" height="28" border="0" id="boatinsurance_blue"></a></td>
 		  <td><a href="http://forums.iboats.com/" rel="nofollow"><img src="http://www.iboats.com/images/new_nav/boating-forums_blue.png" alt="" name="boatingforums_blue" width="121" height="28" border="0" id="boatingforums_blue"></a></td>
@@ -207,7 +207,7 @@
 		<div class="ls_box">
 				<p>
 						</p><ul>
-								<li><a href="http://www.iboats.com/boats/">Boats</a></li>
+								<li><a href="http://boats.iboats.com/boats/">Boats</a></li>
 								<li><a href="http://www.iboats.com/used_boats/">Used Boats</a></li>
 								<li><a href="http://www.iboats.com/new_boats/">New Boats</a></li>
 								<li><a href="http://www.iboats.com/boats/marine--1/boats--10/power_boats--100/">Powerboats</a></li>
@@ -273,7 +273,7 @@
 			<p>
 				<a href="http://www.iboats.com/" target="_parent">iboats Home</a> 
 				| 
-				<a href="http://www.iboats.com/boats/" target="_parent">Boats for Sale</a> 
+				<a href="http://boats.iboats.com/" target="_parent">Boats for Sale</a> 
 				| 
 				<a href="http://boats.iboats.com/" target="_parent">Boats for Sale by Manufacturer</a> 
 				| 
